feat: add pictures uploading to the client
